# media_organizer_rs

./: Cargo.toml  README.md  config.example.toml
.mediaorganizer_sessions/20260623_102221_af714b41/: plan.json
.mediaorganizer_sessions/20260623_151456_16cb96db/: plan.json
.mediaorganizer_sessions/20260623_151735_16294010/: plan.json
.mediaorganizer_sessions/20260623_152545_d2b21812/: plan.json
.mediaorganizer_sessions/20260623_153048_c9c76469/: plan.json
.mediaorganizer_sessions/20260623_153558_65c6dd75/: plan.json
.mediaorganizer_sessions/20260623_154143_68251d30/: plan.json
.mediaorganizer_sessions/20260623_155126_48c14214/: plan.json
.mediaorganizer_sessions/20260623_155403_82d5f439/: plan.json
.mediaorganizer_sessions/20260623_160945_2f8d1e36/: plan.json
.mediaorganizer_sessions/20260623_161339_108e10c0/: plan.json
.mediaorganizer_sessions/20260623_165434_6be5f426/: plan.json
.mediaorganizer_sessions/20260623_165747_5c8f88f8/: plan.json
.mediaorganizer_sessions/20260623_165927_15c4ba9f/: plan.json
docs/en/: QUICKSTART.md  USER-MANUAL.md
examples/: test_full_parse.rs  test_parse.rs  test_pattern_order.rs  test_season_imdb.rs  test_season_regex.rs  verify_prefix.rs
src/: error.rs  main.rs
tests/: anthology_e2e_test.rs  anthology_series_tests.rs  cli_index_tests.rs  config_tests.rs  folder_generator_tests.rs  indexer_tests.rs  io_tests.rs  parser_tests.rs  planner_tests.rs  poster_integration_tests.rs  poster_tests.rs  season_external_ids_integration_test.rs  season_nfo_tests.rs  tv_metadata_validation_tests.rs  utils_metadata_tests.rs
(+84 files in other folders)
