[package]
name = "media_organizer"
version = "0.4.14"
edition = "2021"
authors = ["jpixy"]
description = "A CLI tool for organizing video files (movies and TV shows) using AI and TMDB"
license = "MIT"
repository = "https://github.com/jpixy/media_organizer"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system
walkdir = "2.4"

# Progress and output
indicatif = "0.17"
colored = "2.1"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Utils
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Additional utilities
urlencoding = "2.1"
dirs = "5.0"
regex = "1.10"
futures = "0.3"
zip = "2.2"
whoami = "1.5"

# Chinese pinyin conversion for sorting prefixes
pinyin = "0.11"

[dev-dependencies]
tempfile = "3.9"

[[bin]]
name = "mediaorganizer"
path = "src/main.rs"
